created webpage from scraped data

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -37,7 +37,7 @@
     "news_url = 'https://mars.nasa.gov/news/'\n",
     "browser.visit(news_url)\n",
     "html = browser.html\n",
-    "# time.sleep(2)\n",
+    "time.sleep(10)\n",
     "\n",
     "# create beautiful soup object; parse with html.parser\n",
     "soup = bs(html, 'html.parser')"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA17011_hires.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA18907_hires.jpg\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -154,10 +154,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1</th>\n",
+       "      <th>Mars</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>Description</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -187,8 +187,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                  1\n",
-       "0                                                  \n",
+       "                                               Mars\n",
+       "Description                                        \n",
        "Equatorial Diameter:                       6,792 km\n",
        "Polar Diameter:                            6,752 km\n",
        "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
@@ -196,7 +196,7 @@
        "Orbit Distance:            227,943,824 km (1.38 AU)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,15 +208,17 @@
     "# save the first table as a dataframe\n",
     "mars_df = tables[0]\n",
     "\n",
+    "mars_df.columns = ['Description', 'Mars']\n",
+    "\n",
     "# set hte first column as the index\n",
-    "mars_df.set_index(0, inplace=True)\n",
+    "mars_df.set_index('Description', inplace=True)\n",
     "\n",
     "mars_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
        "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>1</th>    </tr>    <tr>      <th>0</th>      <th></th>    </tr>  </thead>  <tbody>    <tr>      <th>Equatorial Diameter:</th>      <td>6,792 km</td>    </tr>    <tr>      <th>Polar Diameter:</th>      <td>6,752 km</td>    </tr>    <tr>      <th>Mass:</th>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <th>Moons:</th>      <td>2 (Phobos &amp; Deimos)</td>    </tr>    <tr>      <th>Orbit Distance:</th>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <th>Orbit Period:</th>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <th>Surface Temperature:</th>      <td>-87 to -5 °C</td>    </tr>    <tr>      <th>First Record:</th>      <td>2nd millennium BC</td>    </tr>    <tr>      <th>Recorded By:</th>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,9 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mmidw\\anaconda3\\envs\\NewPythonData\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:493: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  FutureWarning,\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -276,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
